Major updates in functions, and associated chucks, for all point data in the fish and cetacean section. Functions were updated by Phil Greyson and Gordana Lazin. All data pre-processing was moved by Phil Greyson outside app to simplify functions and Rmarkdowns.

--- a/app/Rmd/report_cetaceans_FR.Rmd
+++ b/app/Rmd/report_cetaceans_FR.Rmd
@@ -147,11 +147,17 @@ Veuillez consulter la liste de toutes les sources d’information utilisées dan
 Habitat important pour la baleine à bec commune dans les zones situées entre les canyons de l’est du plateau néo-écossais  
 Personne-ressource : <MaritimesRAP.XMAR@dfo-mpo.gc.ca>   
 LIEN : <http://publications.gc.ca/collections/collection_2020/mpo-dfo/fs70-6/Fs70-6-2020-008-fra.pdf>    
-Consulté le : 17 février 2021 de la région des Maritimes     
+Consulté le : 17 juin 2021 sur le Portail de données ouvertes <https://ouvert.canada.ca/data/fr/dataset/9fd7d004-970c-11eb-a2f3-1860247f53e3>      
 Niveau de qualité : Élevée   
 Niveau de sécurité : aucun.  
 
-Le texte suivant est résumé dans le document MPO 2020 : Les zones entre les canyons situées entre les habitats essentiels actuels du Gully, du canyon Shortland et du canyon Haldimand constituent un habitat important pour la baleine à bec commune du plateau néo-écossais. Comme c’est le cas dans l’habitat essentiel des canyons, la baleine à bec commune est présente toute l’année dans les zones entre les canyons, qui servent d’habitat d’alimentation et de couloirs de déplacement. La délimitation suggérée de l’habitat important pour la baleine à bec commune dans les zones situées entre les canyons de l’est du plateau néo-écossais est présentée dans cette section. Veuillez prendre note que l’étendue de l’habitat important de la baleine à bec commune sur le plateau néo-écossais demeure inconnue. Les analyses présentées dans le document MPO 2020 ont été conçues pour évaluer l’importance des zones entre les canyons situées entre les habitats essentiels désignés, mais d’autres habitats importants pour la population peuvent exister en dehors de ces zones. D’autres recherches sont nécessaires pour s’assurer que tous les habitats importants nécessaires au rétablissement de la population ont été désignés, ainsi que pour améliorer notre compréhension des besoins en habitat de l’espèce. Les efforts de surveillance acoustique passive ont récemment été élargis pour inclure d’autres zones le long du plateau néo-écossais. Lorsqu’ils seront disponibles, ces ensembles de données donneront un nouvel aperçu de la présence saisonnière et des activités de recherche de nourriture des baleines à bec communes. Outre la population du plateau néo-écossais, une population distincte de baleines à bec communes vit dans la région du détroit de Davis, de la baie de Baffin et de la mer du Labrador. Des observations documentées ont récemment eu lieu au large de Terre-Neuve. Aucun lien génétique clair ni aucune correspondance par photo-identification n’ont été établis entre la population du plateau néo-écossais et la baleine à bec commune au large de Terre-Neuve ou dans les eaux plus nordiques, et la structure de la population de baleines à bec communes au large de l’est du Canada n’est pas tout à fait bien comprise. D’autres études sont en cours pour répondre à des questions plus vastes concernant la structure et la connectivité des populations.
+La population de baleine à bec commune (_Hyperoodon ampullatus_) du plateau néo-écossais est inscrite sur la liste des espèces en voie de disparition de la Loi sur les espèces en péril du Canada (LEP). Une partie de l’habitat essentiel de cette population a été relevée dans le programme de rétablissement publié pour la première fois en 2010 (Pêches et Océans Canada 2016), et trois zones d’habitat essentiel ont été désignées le long du plateau néo-écossais, notamment dans le Gully et les canyons Shortland et Haldimand (fichier accessible en ligne). Toutefois, dans le programme de rétablissement, on reconnaissait que d’autres zones pourraient constituer un habitat essentiel pour la population, et on recommandait de réaliser d’autres études fondées sur la surveillance acoustique et visuelle afin d’évaluer l’importance des zones situées entre les canyons en tant qu’habitats d’alimentation et de corridors de déplacement pour la baleine à bec commune.
+
+Dans une étude subséquente portant sur la répartition, les mouvements et l’utilisation de l’habitat de la baleine à bec commune dans l’est du plateau néo-écossais (Stanistreet et al., sous presse), plusieurs sources de données ont été évaluées et d’autres zones d’habitat important ont été relevées entre le Gully et les canyons Shortland et Haldimand (MPO 2020). Un sommaire des données d’entrée, des analyses et des limites de l’étude est présenté ci-dessous.
+
+De 2012 à 2014, une surveillance acoustique passive a été effectuée tout au long de l’année à deux endroits entre les canyons, au moyen d’enregistreurs installés sur le fond. Cette surveillance a révélé que des baleines à bec communes fréquentent ces zones et s’y alimentent presque toute l’année, les détections acoustiques atteignant un sommet au printemps. Les détections provenant des enregistrements acoustiques obtenus lors de relevés réalisés à partir de navires ont fourni des preuves supplémentaires de la présence de l’espèce dans les zones entre les canyons pendant les mois d’été. Des données de photo-identification recueillies dans le Gully et les canyons Shortland et Haldimand entre 2001 et 2017 ont été utilisées pour modéliser les profils de résidence et de déplacement des baleines à bec communes dans les canyons et entre ceux-ci, et ont montré que des individus se déplaçaient régulièrement entre les trois canyons ainsi que vers et depuis des zones extérieures. Collectivement, ces résultats indiquent une forte connectivité entre le Gully et les canyons Shortland et Haldimand, et démontrent que les zones entre les canyons constituent un important habitat d’alimentation et servent de couloirs de déplacement pour les baleines à bec communes du plateau néo-écossais.
+
+Le polygone des zones d’habitat situées entre les canyons a été délimité par la courbe isobathe de 500 m et par des lignes droites reliant les angles sud-est des zones d’habitat essentiel existantes, mais ces limites sont fondées sur des données spatiales peu abondantes concernant la présence des baleines à bec communes dans les eaux plus profondes. Il faudra davantage de données pour pouvoir déterminer si cette zone englobe entièrement l’habitat important situé entre les canyons, surtout en ce qui concerne la limite sud-est plus profonde. De même, l’étendue complète de l’habitat important pour la population de baleine à bec commune du plateau néo-écossais demeure inconnue, et les zones potentielles d’habitat essentiel en dehors des canyons et des zones situées entre ceux-ci dans l’est du plateau néo-écossais n’ont pas été entièrement évaluées. Pour de plus amples renseignements, consulter le rapport du MPO (MPO 2020).
 
 #### ***Résultats de la recherche sur l’habitat important pour la baleine à bec commune, par zone*** <br><br> 
 **under-development**
