--- a/app/Rmd/report_fish_EN.Rmd
+++ b/app/Rmd/report_fish_EN.Rmd
@@ -14,26 +14,29 @@ Dataset description from the Open Data record [@OpenData_MAR_RV]: The Fisheries 
 
 ```{r table RV read, echo=FALSE, cache=FALSE, include = FALSE}
 table_RV <- read.csv("../data/misc/table_RV_EN.csv")
-table_RV<- table_RV %>% dplyr::rename("Season/Months"=Season.Months,
-                                   "Description of Geographic Range"=Description.of.Geographic.Range)
+table_RV<- table_RV %>% dplyr::rename("Season/Months"=Season.Months,"Description of Geographic Range"=Description.of.Geographic.Range)
 ```
 ```{r}
 knitr::kable(table_RV, align="l",
-      caption = "Summary of data collected during the 4 distinct Maritimes Research Vessel (RV) Surveys. See Chadwick et al. (2007) for more information on the timeline and periodic adjustment of the 4VSW surveys.", booktabs = T, escape = F, linesep="")
-#%>% kable_styling(bootstrap_options = "striped", full_width = T, position = "left")
+      caption = "Summary of data collected during the 4 distinct Maritimes Research Vessel (RV) Surveys. See Chadwick et al. (2007) for more information on the timeline and periodic adjustment of the 4VSW surveys.", booktabs = T, escape = F, linesep="") %>% kable_styling(bootstrap_options = "striped", full_width = T, position = "left")
 ```
 
 #### ***Area-specific Maritimes Research Vessel (RV) Survey search results***
+
 ```{r, include=FALSE, cache=FALSE}
-  RVCatch_sf <- RVCatch_sf %>% dplyr::filter(YEAR >= minYear)
-  RVCatch_intersect <- sf::st_intersection(RVCatch_sf,studyArea)
-  Total_number_sets_RV <- length(unique(RVCatch_intersect$SETNO))
-  rv_SAR_table <- table_rv_SAR(RVCatch_intersect, listed_fish_invert_species)
-  rv_table <- table_rv(RVCatch_intersect)
+  outputList <- main_intersect(RVCatch_sf, studyArea,speciestable = RVGSSPECIES, Bbox = bboxMap, Year = minYear)
+
+Samples_bbox <- outputList[[3]]
+
+if (!is.null(outputList)) {
+  tableList <- create_table_RV(outputList[[1]], listed_species, speciestable = RVGSSPECIES)
+  table_rv1 <- tableList[[1]]
+  table_rv2 <- tableList[[2]]
+}
 ```
 *
 ```{r, comment="", prompt=TRUE, echo=FALSE, results='asis'}
-Report_RV<-if(length(rv_SAR_table) < 1){
+Report_RV <- if (is.null(outputList)) {
     "There are no relevant records in the Maritimes Research Vessel (RV) Survey for this search area."
   } else {
     "There are relevant records in the Maritimes Research Vessel (RV) Survey for this search area."
@@ -41,33 +44,22 @@ Report_RV<-if(length(rv_SAR_table) < 1){
 Report_RV<-noquote(Report_RV)
 writeLines(Report_RV)
 ```
-```{r}
-RVCatch_intersect <- RVCatch_intersect %>% tidyr::extract(geometry, c('long', 'lat'), '\\((.*), (.*)\\)', convert = TRUE)
-rv_start_sites <- data.frame(unique(cbind(longitude=RVCatch_intersect$lon,latitude=RVCatch_intersect$lat)))
-rv_end_sites <- data.frame(unique(cbind(longitude=RVCatch_intersect$ELONG, latitude=RVCatch_intersect$ELAT)))
-startx <- rv_start_sites$longitude
-starty <- rv_start_sites$latitude
-endx <- rv_end_sites$longitude
-endy <- rv_end_sites$latitude
-```
 
-```{r, fig.height=8, fig.width=11, fig.cap= 'Quality Tier: High. Security level: none. Map showing the search area defined by the user: location of the proposed project/activity is highlighted in yellow (input polygon), surrounded by an exposure zone or user-defined buffer area in blue. Buffer area was used to query information from the Maritimes Research Vessel (RV) Survey. Black lines and arrows indicate the location and direction of each bottom otter trawl sample.'}
-site_map(studyArea, site, land50k_sf, 10, bounds_sf) +
-  geom_point(data = rv_start_sites, aes(x = longitude, y = latitude), size = 3,shape = 16, colour = "darkgreen")+ geom_point(data = rv_end_sites, aes(x = longitude, y = latitude), size = 2, shape = 16, colour = "firebrick4")+
-  geom_segment(aes(x = startx, y = starty, xend = endx, yend = endy),arrow=arrow(length = unit(0.2,"cm")), size = 0.5)
-```
-<br><br>
-```{r}
-if( Total_number_sets_RV>= 1){
-knitr::kable(rv_SAR_table, align="l", caption="\\label{tab:rv_SAR_table}Quality Tier: High. Security level: none. Maritimes Research Vessel (RV) Survey observation records of species contained within the search area and listed by the <i>Species At Risk Act</i> (SARA), species assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC), or species included in the Wild species listing (B=Breeding, N=non-breeding, M=migratory). <b>The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area.</b>", booktabs = T, escape = F, linesep="")
-  #%>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
+```{r, fig.height=8, fig.width=11, fig.cap= 'Quality Tier: High. Security level: none. Map showing the search area defined by the user (red outline) used to query information from the Maritimes Research Vessel (RV) Trawl Survey. Black lines and arrows indicate the location and direction of each bottom otter trawl sample. Frequency represents number of trawls in which a given species was sampled, relative to the total number of trawls within the search area'}
+if (!is.null(outputList)) {
+areaMap + geom_segment(aes(x = Samples_bbox$long, y = Samples_bbox$lat, xend = Samples_bbox$ELONG, yend = endy <- Samples_bbox$ELAT),arrow=arrow(length = unit(0.2,"cm")), size = 0.5)
 }
 ```
-<br><br>
+<br>
 ```{r}
-if( Total_number_sets_RV>= 1){
-knitr::kable(rv_table, align="l", caption="\\label{tab:rv_freq_table}Quality Tier: High. Security level: none. Maritimes Research Vessel (RV) Survey observation records of <u>all species</u> contained within the search area, summarized by species or species group. <b>The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area.</b>", booktabs = T, escape = F, linesep="")
-  #%>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
+if (!is.null(outputList)) {
+ knitr::kable(table_rv2, align="l", caption="\\label{tab:rv_SAR_table} Quality Tier: High. Security level: none. Maritimes Research Vessel (RV) Survey observation records of species contained within the search area and listed by the <i>Species At Risk Act</i> (SARA), species assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC), or species included in the Wild species listing (B=Breeding, N=non-breeding, M=migratory). <b>The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area.</b>", booktabs = T, escape = F, linesep="") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
+}
+```
+<br>
+```{r}
+if (!is.null(outputList)) {
+knitr::kable(table_rv1, align="l", caption="\\label{tab:rv_freq_table}Quality Tier: High. Security level: none. Maritimes Research Vessel (RV) Survey observation records of <u>all species</u> contained within the search area, summarized by species or species group. <b>The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area.</b>", booktabs = T, escape = F, linesep="") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
 }
 ```
 
@@ -81,7 +73,7 @@ Quality Tier: Medium
 Search year: 2002-2019  
 Security level: Protected B  
 
-The Industry Survey Database (ISDB) is a departmental database containing at-sea fish catch observations from commercial fishing vessels operating in the Northwest Atlantic. Industry surveys are not spatially or temporally synoptic and, therefore, integrating additional information on presence and/or habitat use (i.e., spawning, migration, feeding areas) from larger-scale studies is strongly recommended. Fisheries catch and effort information for an individual license holder is considered personal information and is protected under section 19 of the Access to Information Act (https://laws-lois.justice.gc.ca/eng/acts/a-1/page-5.html#h-12), and, for a corporate license holder, is considered to be sensitive, proprietary information and protected under Section 20 of the Access to Information Act (https://laws-lois.justice.gc.ca/eng/acts/a-1/page-5.html#h-13).
+The Industry Survey Database (ISDB) is a departmental database containing at-sea fish catch observations from commercial fishing vessels operating in the Northwest Atlantic. Records can be associated with regular commercial fishing activities, or can represent industry-led scientific surveys. Industry surveys are not spatially or temporally synoptic and, therefore, integrating additional information on presence and/or habitat use (i.e., spawning, migration, feeding areas) from larger-scale studies is strongly recommended. Fisheries catch and effort information for an individual license holder is considered personal information and is protected under section 19 of the Access to Information Act (https://laws-lois.justice.gc.ca/eng/acts/a-1/page-5.html#h-12), and, for a corporate license holder, is considered to be sensitive, proprietary information and protected under Section 20 of the Access to Information Act (https://laws-lois.justice.gc.ca/eng/acts/a-1/page-5.html#h-13).
 
 Without written consent, DFO is not permitted to release information or data products from ISDB (e.g., maps and data layers) that might reveal personal or third party information such as catch, landed values, and vessel-specific fishing locations, as this information is considered confidential. Information on privacy policy is available in the DFO staff informal release guidelines (i.e., Appendix B – “Catch and Effort and Quota Information: Do’s and Don’ts for Informal Release” (\\\\ent.dfo-mpo.ca\\ATLShares\\Shared\\ATIP Information\\Information_Release_Guidelines-eng.docx). If you are interested in including observer data in a publication, please remember to aggregate it (https://github.com/Maritimes/Mar.utils/blob/master/R/assess_privacy.r). 
 
@@ -93,55 +85,31 @@ Quality Tier: Medium
 Search year: 2002-2019    
 Security level: Protected B    
 
-The Maritimes Fishery Information System (MARFIS) is a DFO database, managed by the Policy & Economics Branch. MARFIS contains catch and effort, quota, and licensing information for the Maritimes Region. Log information for all commercial fisheries that land within this region is associated with this data. If a Maritimes Region commercial vessel makes landings in another DFO region or outside of Canadian waters, information is not included in the MARFIS database, irrespective if that vessel originated in the Maritimes Region. The majority of catch information is related to commercial offloads. Reported information contained within MARFIS is not considered spatially or temporally synoptic and, therefore, integrating additional information on presence and/or habitat use (i.e., spawning, migration, feeding) from larger-scale studies is strongly recommended. There is also more limited data related to discards and the Species At Risk data logs. Not all catch records have associated lat/long coordinates. Depending on the structure or completeness of the log, some records may not have associated geographic coordinates. However, generally all records are associated with a NAFO Division and NAFO Unit Area, even if no coordinates have been provided. Production data (<4 years old) are considered preliminary and subject to change without notice. Changes to archived data (>4 years old) may also occur but are generally limited. Ongoing qa/qc work is done on the MARFIS database, but not all errors are corrected. If you have data errors, questions, or corrections, you can send them to our data quality inbox: CDDDataQuality@dfo-mpo.gc.ca. This information about MARFIS was provided by Colin.O'Neil@dfo-mpo.gc.ca (July 2020, Policy & Economics Branch). If you are interested in including observer data in a publication, please remember to aggregate it (https://github.com/Maritimes/Mar.utils/blob/master/R/assess_privacy.r). 
+The Maritimes Fishery Information System (MARFIS) is a DFO database, managed by the Policy & Economics Branch. MARFIS contains catch and effort, quota, and licensing information for the Maritimes Region. Log information for all commercial fisheries that land within this region is associated with this data. If a Maritimes Region commercial vessel makes landings in another DFO region or outside of Canadian waters, information is not included in the MARFIS database, irrespective of whether that vessel originated in Maritimes Region. The majority of catch information is related to commercial offloads i.e. dockside monitoring programs. Reported information contained within MARFIS is not considered spatially or temporally synoptic and, therefore, integrating additional information on presence and/or habitat use (i.e., spawning, migration, feeding) from larger-scale studies is strongly recommended. There is also more limited data related to discards and the Species At Risk data logs. Not all catch records have associated lat/long coordinates or information on fishing effort. However, generally all records are associated with a NAFO Division and NAFO Unit Area, even if no coordinates have been provided. Production data (<4 years old) are considered preliminary and subject to change without notice. Changes to archived data (>4 years old) may also occur but are generally limited. Ongoing qa/qc work is done on the MARFIS database, but not all errors are corrected. If you have data errors, questions, or corrections, you can send them to our data quality inbox: CDDDataQuality@dfo-mpo.gc.ca. This information about MARFIS was provided by Colin.O'Neil@dfo-mpo.gc.ca (July 2020, Policy & Economics Branch). If you are interested in including comercial catch data in a publication, please remember to aggregate it (https://github.com/Maritimes/Mar.utils/blob/master/R/assess_privacy.r). 
 
 #### ***Area-specific MARFIS & ISDB search results***
 ```{r, include=FALSE, cache=FALSE}
-isdb1 <- isdb1 %>% dplyr::filter(YEAR >= minYear)
-isdb_sf <- sf::st_as_sf(isdb1, coords = c("LONGITUDE", "LATITUDE"), crs = 4326)
-isdb_intersect <- sf::st_intersection(isdb_sf,studyArea)
-isdb_intersect <- isdb_intersect %>%
-  tidyr::extract(geometry, c('long', 'lat'), '\\((.*), (.*)\\)', convert = TRUE)
-isdb_sites <- data.frame(longitude=isdb_intersect$long,latitude=isdb_intersect$lat)
+outputListI <- main_intersect(isdb_sf, studyArea, Bbox = bboxMap, Year = minYear)
+outputListM <- main_intersect(marfis_sf, studyArea, Bbox = bboxMap, Year = minYear)
+Samples_bboxI <- outputListI[[3]]
+Samples_bboxM <- outputListM[[3]]
 
-isdb_table <- table_isdb(isdb_intersect)
-isdb_SAR_table <- table_isdb_SAR(isdb_intersect, listed_fish_invert_species)
-```
-```{r}
-Total_number_records_isdb <- sum(isdb_table$Records)
-Total_number_SAR_records_isdb<-sum(isdb_SAR_table$Records)
-isdb_summary_table<-data.frame(Total_organisms_recorded_in_polygon="", LISTED_organisms_recorded_in_polygon="")
-isdb_summary_table[1,1]<-Total_number_records_isdb
-isdb_summary_table[1,2]<-Total_number_SAR_records_isdb
-isdb_summary_table<- isdb_summary_table %>%
-  dplyr::rename("Total organisms recorded in polygon"=Total_organisms_recorded_in_polygon,"Listed organisms recorded in polygon"=LISTED_organisms_recorded_in_polygon)
-```
-```{r, include=FALSE, cache=FALSE}
-# marfis1 <- marfis1 %>% dplyr::filter(DATE_FISHED >= minYear)
-# marfis1$YEAR <- lubridate::year(marfis1$DATE_FISHED)
-# marfis_sf <- sf::st_as_sf(marfis1, coords = c("LONGITUDE", "LATITUDE"), crs = 4326)
-# marfis_intersect <- sf::st_intersection(marfis_sf,studyArea)
+if (!is.null(outputListI)) {
+  tableList <- create_table_ISDB(outputListI[[1]], listed_species,
+                                 speciestable = ISSPECIESCODES)
+  table_isdb1 <- tableList[[1]]
+  table_isdb2 <- tableList[[2]]
+}
 
-# marfis_intersect <- marfis_intersect %>%
-#   tidyr::extract(geometry, c('long', 'lat'), '\\((.*), (.*)\\)', convert = TRUE)
-# marfis_sites <- data.frame(longitude = marfis_intersect$long, latitude = marfis_intersect$lat)
-# 
-# marfis_table <- table_marfis(marfis_intersect)
-# marfis_SAR_table <- table_marfis_SAR(marfis_intersect, listed_fish_invert_species)
-```
-
-```{r}
-# Total_number_records_marfis <- sum(marfis_table$Records)
-# Total_number_SAR_records_marfis <- sum(marfis_SAR_table$Records)
-# marfis_summary_table<-data.frame(Total_organisms_recorded_in_polygon="", LISTED_organisms_recorded_in_polygon="")
-# marfis_summary_table[1,1] <- Total_number_records_marfis
-# marfis_summary_table[1,2] <- Total_number_SAR_records_marfis
-# marfis_summary_table <- marfis_summary_table %>%
-#   dplyr::rename("Total organisms recorded in polygon"=Total_organisms_recorded_in_polygon, "Listed organisms recorded in polygon"=LISTED_organisms_recorded_in_polygon)
+if (!is.null(outputListM)) {
+  tableList <- create_table_MARFIS(outputListM[[1]], listed_species, speciestable = MARFISSPECIESCODES)
+  table_mar1 <- tableList[[1]]
+  table_mar2 <- tableList[[2]]
+}
 ```
 *
 ```{r, comment="", prompt=TRUE, echo=FALSE, results='asis'}
-Report_isdb<-if(Total_number_SAR_records_isdb < 1){
+Report_isdb <- if (is.null(outputListI)) {
     "There are no relevant records in the Industry Survey Database (ISDB) for this search area."
   } else {
     "There are relevant records in the Industry Survey Database (ISDB) for this search area."
@@ -152,40 +120,43 @@ writeLines(Report_isdb)
 
 *
 ```{r, comment="", prompt=TRUE, echo=FALSE, results='asis'}
-# Report_marfis<-if(Total_number_SAR_records_marfis < 1){
-#     "There are no relevant records in the Maritimes Fishery Information System (MARFIS) for this search area."
-#   } else {
-#     "There are relevant records in the Maritimes Fishery Information System (MARFIS) for this search area."
-#   }
-# Report_marfis<-noquote(Report_marfis)
-# writeLines(Report_marfis)
+Report_marfis <- if (is.null(outputListM)) {
+    "There are no relevant records in the Maritimes Fishery Information System (MARFIS) for this search area."
+  } else {
+    "There are relevant records in the Maritimes Fishery Information System (MARFIS) for this search area."
+  }
+Report_marfis<-noquote(Report_marfis)
+writeLines(Report_marfis)
 ```
 
-```{r, fig.height=8, fig.width=11, fig.cap='Quality Tier: Medium. Security level: Protected B. Map showing the search area defined by the user: location of the proposed project/activity is highlighted in yellow (input polygon), surrounded by an exposure zone or user-defined buffer area in blue. Buffer area was used to query aggregated information from Maritimes Fishery Information System (MARFIS) and/or Industry Survey Database (ISDB) observation records shown as black points, for all species. Rule of five was not applied.'}
-site_map(studyArea,site,land50k_sf,10,bounds_sf)+
-  geom_point(data = isdb_sites, aes(x = longitude, y = latitude), size = 2,
-        shape = 16, fill = "black") #+
-  #geom_sf(data = marfis_sites, size = 2, shape = 16, fill = "black")
+```{r, fig.height=8, fig.width=11, fig.cap='Quality Tier: Medium. Security level: Protected B. Map showing the search area defined by the user (red outline) used to query aggregated information from Maritimes Fishery Information System (MARFIS) and/or Industry Survey Database (ISDB) observation records shown as black points, for all species. Rule of five was not applied.'}
+if (!is.null(outputListI) & !is.null(outputListM)) {
+  areaMap + geom_point(data = Samples_bboxI, aes(x = long, y = lat), size = 2, shape = 16, col = "black") + geom_point(data = Samples_bboxM, aes(x = long, y = lat), size = 2, shape = 16, col = "black")
+} else if (!is.null(outputListI)) {
+    areaMap + geom_point(data = Samples_bboxI, aes(x = long, y = lat), size = 2, shape = 16, col = "black")
+} else if (!is.null(outputListM)) {
+        areaMap + geom_point(data = Samples_bboxM, aes(x = long, y = lat), size = 2, shape = 16, col = "black")
+}
 ```
 ```{r}
- knitr::kable(isdb_SAR_table, align="l", caption="Quality Tier: Medium. Security level: Protected B. Industry Survey Database (ISDB) observation records of species contained within the search area and listed by the <i>Species At Risk Act</i> (SARA), assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC), or included in the Wild species listings (B=Breeding, N=non-breeding, M=migratory). <b>The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area.</b>", booktabs = T, escape = F, linesep="")
-# %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
+if (!is.null(outputListI)) {
+knitr::kable(table_isdb2, align="l", caption="Quality Tier: Medium. Security level: Protected B. Industry Survey Database (ISDB) observation records of species contained within the search area and listed by the <i>Species At Risk Act</i> (SARA), assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC), or included in the Wild species listings (B=Breeding, N=non-breeding, M=migratory). <b>The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area.</b>", booktabs = T, escape = F, linesep="")} %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
 ```
 <br><br>
 ```{r}
- # knitr::kable(isdb_table, align="l", caption="Quality Tier: Medium. Security level: Protected B. Industry Survey Database (ISDB) observation records of <u>all species</u> contained within the search area, summarized by species or species group. <b>The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area.</b>", booktabs = T, escape = F, linesep="")
-# %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
+if (!is.null(outputListI)) {
+  knitr::kable(table_isdb1, align="l", caption="Quality Tier: Medium. Security level: Protected B. Industry Survey Database (ISDB) observation records of <u>all species</u> contained within the search area, summarized by species or species group. <b>The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area.</b>", booktabs = T, escape = F, linesep="")} %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
 ```
-<br><br>
 
 ```{r}
- # knitr::kable(marfis_SAR_table, align="l", caption="Quality Tier: Medium. Security level: Protected B. Maritimes Fishery Information System (MARFIS) observation records of species contained within the search area and listed by the <i>Species At Risk Act</i> (SARA), assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC), or included in the Wild species listings (B=Breeding, N=non-breeding, M=migratory). <b>The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area.</b>", booktabs = T, escape = F, linesep="")
-# %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
+if (!is.null(outputListM)) {
+  knitr::kable(table_mar2, align="l", caption="Quality Tier: Medium. Security level: Protected B. Maritimes Fishery Information System (MARFIS) observation records of species contained within the search area and listed by the <i>Species At Risk Act</i> (SARA), assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC), or included in the Wild species listings (B=Breeding, N=non-breeding, M=migratory). <b>The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area.</b>", booktabs = T, escape = F, linesep="")} %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
 ```
 <br><br>
 ```{r}
- # knitr::kable(marfis_table, caption="Quality Tier: Medium. Security level: Protected B. Maritimes Fishery Information System (MARFIS) observation records of <u>all species</u> contained within the search area, summarized by species or species group. <b>The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area.</b>", booktabs = T, escape = F, linesep="") %>% column_spec(1, width="15cm")
-# %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
+if (!is.null(outputListM)) {
+  knitr::kable(table_mar1, caption="Quality Tier: Medium. Security level: Protected B. Maritimes Fishery Information System (MARFIS) observation records of <u>all species</u> contained within the search area, summarized by species or species group. <b>The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area.</b>", booktabs = T, escape = F, linesep="")  %>% column_spec(1, width="15cm")
+} %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
 ```
 ### **Ocean Biodiversity Information System (OBIS)**  
 Contact: helpdesk@obis.org  
@@ -200,36 +171,34 @@ OBIS is a global, open-access data and information clearing-house on marine biod
 #### ***Area-specific OBIS fish and invertebrate search results***
 
 ```{r, include=FALSE, cache=FALSE}
- obis_sf_filter <- filter_obis_fish(obis_sf)
- obis_intersect_points_fish <-intersect_points_obis_fish(obis_sf_filter, studyArea, listed_fish_invert_species)
- obis_fish_table <- table_obis_fish(obis_sf_filter, studyArea, listed_fish_invert_species)
- Total_number_fish_records_obis <- nrow(obis_fish_table)
+outputList <- main_intersect(obis_fish_sf, studyArea, Bbox = bboxMap, Year = minYear)
+Samples_bbox <- outputList[[3]]
+
+if (!is.null(outputList)) {
+  tableList <- create_table_OBIS(outputList[[1]])
+  table_obis1 <- tableList[[1]]
+}
 ```
 *
 ```{r, echo=FALSE, results='asis',}
-Report_obis<-if(Total_number_fish_records_obis < 1){
+Report_obis <- if (is.null(outputList)) {
   "There are no relevant records in the Ocean Biodiversity Information System (OBIS) for this search area."
 } else {
   "There are relevant records in the Ocean Biodiversity Information System (OBIS) for this search area."
 }
 Report_obis<-noquote(Report_obis)
-writeLines(c(Report_obis), sep = "\n")
+writeLines(Report_obis)
 ```
-```{r, fig.height=8, fig.width=11, fig.cap='Quality Tier: Medium. Security level: none. Map showing the search area defined by the user: location of the proposed project/activity is highlighted in yellow (input polygon), surrounded by an exposure zone or user-defined buffer area in blue. Buffer area was used to query information from Ocean Biodiversity Information System (OBIS) observation records, for species contained within the search area and listed by the <i>Species At Risk Act</i> (SARA), or assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC) and Wild species. Sightings on land are an indicator that the sighting data have not yet been completely error-checked or that animals were sighted from shore. The absence of a species in this figure should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area.'}
-par(mfrow = c(1,2), mar=c(0, 0, 5.5, 0) + 2)
-obis_plot<-site_map(studyArea, site, land50k_sf, 10, bounds_sf)+
-  geom_point(data = obis_intersect_points_fish, aes(x = long, y = lat), size = 2,
-        shape = 16, fill = "black")
-if(Total_number_fish_records_obis > 1){print(obis_plot)}
+```{r, fig.height=8, fig.width=11, fig.cap='Quality Tier: Medium. Security level: none. Map showing the search area defined by the user (red outline) was used to query information from Ocean Biodiversity Information System (OBIS) observation records, for species contained within the search area and listed by the <i>Species At Risk Act</i> (SARA), or assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC) and Wild species. Sightings on land are an indicator that the sighting data have not yet been completely error-checked or that animals were sighted from shore. The absence of a species in this figure should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area.'}
+if (!is.null(outputList)) {
+  areaMap +
+    geom_point(data = Samples_bbox, aes(x = long, y = lat), size = 2, shape = 16, col = "black")
+}
 ```
 ```{r echo=FALSE, results='asis', caption="Priority species with observations contained in the OBIS database within the search polygon area."}
-OBIS_query_output_table<-if(Total_number_fish_records_obis < 1){
-  ""
-} else {
-knitr::kable(obis_fish_table, align="l", row.names = F, caption="Quality Tier: Medium. Security level: none. Ocean Biodiversity Information System (OBIS) observation records of species contained within the search area and listed by the <i>Species At Risk Act</i> (SARA), assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC), or included in the Wild Species listing (B=Breeding, N=non-breeding, M=migratory). <b>The absence of a species in this figure should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area.</b>", booktabs = T, escape = F, linesep="")
-  #%>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
-  }
-if(Total_number_fish_records_obis > 1){OBIS_query_output_table}
+if (!is.null(outputList)) {
+  knitr::kable(table_obis1, align="l", caption="Quality Tier: Medium. Security level: none. Ocean Biodiversity Information System (OBIS) observation records of species contained within the search area and listed by the <i>Species At Risk Act</i> (SARA), assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC), or included in the Wild Species listing (B=Breeding, N=non-breeding, M=migratory). <b>The absence of a species in this figure should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area.</b>", booktabs = T, escape = F, linesep="")
+}
 ```
 
 
