--- a/app/Rmd/report_fish_FR.Rmd
+++ b/app/Rmd/report_fish_FR.Rmd
@@ -13,11 +13,11 @@ Niveau de sécurité : Aucun
 Description de l’ensemble de données (tirée du dossier des données ouvertes) : Les relevés des écosystèmes de Pêches et Océans Canada, réalisés sur une base annuelle, sont une source de données de surveillance intégrée des écosystèmes. Les données de ces relevés constituent la principale source pour surveiller les tendances de la répartition, de l’abondance et de la condition biologique des espèces au sein de la région, et elles renseignent également le Programme de monitorage de la zone Atlantique (PMZA), qui assure la surveillance des conditions hydrographiques, du zooplancton et du phytoplancton. Les relevés, fondés sur un plan d’échantillonnage aléatoire stratifié, sont réalisés au moyen d’un chalut de fond à panneaux, d’une rosette CTP et de traits verticaux de plancton. Les données tirées des captures au chalut de fond servent à surveiller la répartition et l’abondance des poissons et des invertébrés dans l’ensemble du plateau néo-écossais, de la baie de Fundy et du banc de Georges.  
 
 ```{r table RV read, echo=FALSE, cache=FALSE, include = FALSE}
-table_RV <- read.csv("../data/misc/table_RV_EN.csv")
+#table_RV <- read.csv("../data/misc/table_RV_EN.csv")
 ```
 ```{r}
-kable(table_RV, align="l", 
-      caption = "Summary of data collected during the 4 distinct Maritimes Research Vessel (RV) Surveys. See Chadwick et al. (2007) for more information on the timeline and periodic adjustment of the 4VSW surveys.")
+# kable(table_RV, align="l", 
+#       caption = "Summary of data collected during the 4 distinct Maritimes Research Vessel (RV) Surveys. See Chadwick et al. (2007) for more information on the timeline and periodic adjustment of the 4VSW surveys.")
 ```
 
 
