--- a/app/Rmd/report_planning_EN.Rmd
+++ b/app/Rmd/report_planning_EN.Rmd
@@ -43,7 +43,7 @@ EBSA_location(EBSA_sf, studyArea)
 EBSA_bioregion(EBSA_sf, studyArea)
 ```
 
-```{r, fig.height=8, fig.width=11, fig.cap= 'Quality Tier: High. Security level: none. Map showing Ecologically and Biologically Significant Areas (EBSA; pink) relative to the search area defined by the user: location of the proposed project/activity is highlighted in yellow (input polygon), surrounded by an exposure zone or user-defined buffer area in blue.'}
+```{r, fig.height=8, fig.width=11, fig.cap= 'Quality Tier: High. Security level: none. Map showing Ecologically and Biologically Significant Areas (EBSA; pink) relative to the search area defined by the user (red outline).'}
 plot_EBSA<-function(EBSA_sf, studyArea, land_layer, buf, bound) {
   
   # buf is in km, and now converted to degrees
