simplifying Rmarkdowns to allow troubleshooting

--- a/app/Rmd/report_SARA_EN.Rmd
+++ b/app/Rmd/report_SARA_EN.Rmd
@@ -1,37 +1,9 @@
 ## **INFORMATION FROM NATIONAL AQUATIC SPECIES AT RISK PROGRAM**    
-**Contact:** Carolyn Bakelaar  
-**Internal GIS Tool URL:** <http://dfonl7swvgip001.ent.dfo-mpo.ca/Html5Viewer/index.html?viewer=NationalSARMap_EN&LayerTheme=0&locale=en-US#>  
-
-This section describes Species At Risk distribution/range and critical habitat maps. The official source of information for Species At Risk is the Species At Risk Public Registry www.sararegistry.gc.ca.
-
-DFO’s Species At Risk program is responsible for carrying out DFO’s mandate under the _Species At Risk Act_ (SARA) and is an authoritative source of information for aquatic Species At Risk.
-
-DFO’s Species At Risk program has published Species At Risk distribution/range and critical habitat maps on the Government of Canada Open Data portal, and it has also developed internal and public interactive National Species At Risk Mapping Tools. As described by the National Species At Risk Mapping Tool - Frequently Asked Question (http://dfonl7swvgip001/NationalSARDemo/LinkDocs/Help/FAQsEN_FR.pdf), the Species At Risk Program in NHQ initiated the tool to facilitate project assessment under the _Fisheries Act_ and SARA. It uses a Geographic Information System (GIS) and interactive display of reproducible, spatially-referenced data for aquatic SARA-listed species. The data contained in the tool are maintained by regional SARA program offices, coordinated by the NHQ Species At Risk Program (Steering Committee). Data are added in concert with the Recovery Plans and SARA listing timelines. 
-
-This report is *not* the authoritative advice on Species At Risk data. Please access the Species At Risk GIS tool to create an authoritative report, particularly if any of the data sources are at, or near, the search area
-Below, we provide a list and examination of data products that may overlap with the user-defined search area.
-
 ### **Species At Risk distribution and Critical Habitat data**    
 
-#### ***DFO Species At Risk distribution (range)*** {-}    
-
-Contact: <info@dfo-mpo.gc.ca>  
-Link:  Last retrieved on: October 1 2020 from Open Data  <https://open.canada.ca/data/en/dataset/e0fabad5-9379-4077-87b9-5705f28c490b>  
-Quality Tier: High  
-Security level: none  
-
-Dataset description from the Open Data record [@OpenData_SARrange]: The Species At Risk Program is responsible for carrying out DFO’s mandate under the _Species At Risk Act_ (SARA) to protect, recover and conserve all listed aquatic Species At Risk in Canada. As part of this mandate, this spatial database has been developed to identify areas in which aquatic species listed under SARA may be found. Distribution (range) polygons and lines were assembled by regional SARA biologists using the best available information, including COSEWIC status reports, recovery potential assessments, academic literature, and expert opinion. These spatial data support the protection, recovery and conservation of species listed as Endangered, Threatened or Special Concern under SARA. Species distributions are also described and displayed in Recovery Strategies, Action Plans and/or Management Plans. Discrepancies may exist between the distribution data shown in a species’ SARA recovery document and the current spatial data available through the GIS tool; please contact DFO for more information on any data discrepancies.
+#### ***DFO Species At Risk distribution (range)***     
 
 #### ***Critical Habitat of Species At Risk***    
-
-Contact: <info@dfo-mpo.gc.ca>  
-Last retrieved on: October 1 2020 from Open Data  <https://open.canada.ca/data/en/dataset/db177a8c-5d7d-49eb-8290-31e6a45d786c>  
-Quality Tier: High    
-Security level: none    
-
-Dataset description from the Open Data record [@OpenData_SARcriticalhabitat]: The Species At Risk Program is responsible for carrying out DFO’s mandate under the _Species At Risk Act_ (SARA) to protect, recover and conserve all listed aquatic Species At Risk in Canada. Critical habitat is identified for species listed as Endangered or Threatened under the _Species At Risk Act_ (SARA). Critical habitat is defined under section 2 of SARA as: “the habitat that is necessary for the survival or recovery of a listed wildlife species and that is identified as the species’ critical habitat in the recovery strategy or in an action plan for the species”. Section 49(1)(a) of SARA requires that a species’ Recovery Strategy/Action Plan include an identification of the species’ critical habitat to the extent possible, based on the best available information, including information provided by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC). SARA makes it illegal to destroy any part of the critical habitat of SAR and may impose restrictions on development and construction. Critical habitats were assembled by SARA regional biologists and recovery teams. They are designed to support the protection and recovery of species listed as Endangered or Threatened under the _Species At Risk Act_. They are also described and displayed in species’ Recovery Documents and Action Plans. 
-
-Critical habitat presented in this section are available in the Government of Canada Open Data portal, with the exception of critical habitat for Leatherback Sea Turtle, for which delineation of critical habitat is currently under review. Draft critical habitat for Leatherback Sea Turtle is available in the internal Species At Risk GIS tool and will be available in Open Data in the future.
 
 #### ***Area-specific SAR distribution and critical habitat search results***
 
@@ -72,11 +44,6 @@ crithab_wide <- plot_crithab(ClippedCritHab_sf, leatherback_sf, studyArea, land1
 crithab_zoom <- plot_crithab(ClippedCritHab_sf, leatherback_sf, studyArea,land50k_sf, 50, bounds_sf)
 ```
 
-```{r, fig.height=6, fig.width=11, fig.cap='Quality Tier: High. Security level: none. This map summarizes areas where the search polygon overlaps with distribution (range) of Species At Risk listed as Endangered, Threatened or Special Concern under the <i>Species At Risk Act</i>. This is not the authoritative source or advice for Species At Risk data. Please access the Species At Risk [GIS tool](http://dfonl7swvgip001.ent.dfo-mpo.ca/Html5Viewer/index.html?viewer=NationalSARMap_EN&LayerTheme=0&locale=en-US) to create an authoritative SARA report.'}
-# grid.arrange(sardist_wide, sardist_zoom,
-#              bottom = expression(paste("Longitude ",degree,"N",sep="")),left = expression(paste("Latitude ",degree,"N",sep="")),nrow = 1, widths = c(2.5/5, 2.5/5))
-```
-
 ```{r echo=FALSE, results='asis'}
 Dist_query_output_table<-if(Dist_overlap_result < 1){
   ""
@@ -92,7 +59,6 @@ if(Dist_overlap_result > 1){Dist_query_output_table}
               nrow = 1,
               widths = c(2.5/5, 2.5/5))
 ```
-<br><br>
 
 ```{r echo=FALSE, results='asis'}
 Crithab_query_output_table<-if(crit_result <= 1){
