Added a raster intersect function for the SDM layers in the Pre-processing stage I clipped the rasters using the 50k Ocean mask so that raster cells would not cover islands. Also added in a conversion of the rasters to polygon features so we can choose whether to intersect them as rasters or polygons - Updated the region_map() function based on Gordana's additions and updated the code in intro_EN.RMD to accomodate those changes (lines 66 - 70)

--- a/app/Rmd/report_cetaceans_EN.Rmd
+++ b/app/Rmd/report_cetaceans_EN.Rmd
@@ -152,9 +152,9 @@ Report <- if (is.null(outputList)) {
 writeLines(Report)
 
 areaMapBW <- areaMap+
-           geom_sf(data=outputList[[2]],fill="red",col="black")
+           geom_sf(data=outputList$mapPoly,fill="red",col="black")
 regionMapBW <- regionMap+
-             geom_sf(data=outputList[[3]],fill="red",col="black")
+             geom_sf(data=outputList$regionPoly,fill="red",col="black")
 ```
 
 ```{r bw plots, echo=FALSE, results='asis'}
@@ -185,9 +185,9 @@ Report <- if (is.null(outputList)) {
 writeLines(Report)
 
 areaMapNBNW <- areaMap+
-           geom_sf(data=outputList[[2]],fill="red",col="black")
+           geom_sf(data=outputList$mapPoly,fill="red",col="black")
 regionMapNBNW <- regionMap+
-             geom_sf(data=outputList[[3]],fill="red",col="black")
+             geom_sf(data=outputList$regionPoly,fill="red",col="black")
 
 
 
