--- a/app/Rmd/intro_EN.Rmd
+++ b/app/Rmd/intro_EN.Rmd
@@ -63,13 +63,11 @@ bboxMap=areaMapList[[2]] #bounding box of the map
 ```
 
 ```{r parameters for region_map.r, echo=FALSE, include=FALSE, cache=FALSE}
-# The following defines region geometry "look". studyBox_geom is input into the regional map or can be added to any map later
-RegionBox_geom <- geom_sf(data=Region, fill=NA, col="red", size=1) 
+# Bounding box for the region
+regionBox <- sf::st_bbox(Region) 
 
-# The following plots area map using function (output is a list)
-regionMapList <- region_map(Region, studyArea, land10m_sf, 50, bounds_sf, RegionBox_geom)  
-# The following separates items in the output list: first item is a map and second is a bounding box of the map
-regionMap <- regionMapList[[1]]
+# Create the regional map
+regionMap <- region_map(regionBox, studyArea, land10m_sf, bounds_sf)  
 ```
 
 
